@@ -1,17 +1,17 @@
 package Algorithms;
 
-import DataStructures.ArrayList;
-import DataStructures.Map;
-import DataStructures.MinHeap;
-import DataStructures.Set;
+import DataStructures.*;
 import EntryPoints.Main;
 import util.*;
 
 import java.util.Comparator;
 
 public class AStar implements Algorithm {
+    @Override
     public AlgorithmResults runAlgorithm(Vertex startVertex, ArrayList<Vertex> targets) {
-        ArrayList<Pair<Pair<Vertex, Vertex>, Integer>> orderedTargets = orderTargets(startVertex, targets);
+        int verticesVisited = 0;
+
+        ArrayList<Pair<Pair<Vertex, Vertex>, Integer>> orderedTargets = orderTargetsByDistance(startVertex, targets);
         ArrayList<Path> uncombinedPaths = new ArrayList<>();
 
         while (!orderedTargets.isEmpty()) {
@@ -41,6 +41,8 @@ public class AStar implements Algorithm {
             while (!openSet.isEmpty()) {
                 Pair<Vertex, Integer> current = openSet.poll();
 
+                verticesVisited++;
+
                 if (current.getFst() == currentTarget) {
                     uncombinedPaths.add(reconstructPath(cameFrom, current.getFst(), currentFrom));
                     break;
@@ -67,48 +69,57 @@ public class AStar implements Algorithm {
             if (uncombinedPaths.isEmpty()) return new AlgorithmResults(0, new Path());
         }
 
+        //Combine all paths into full path
         Path combinedPath = combinePaths(uncombinedPaths);
-        combinedPath.setFullPath(true);
+        combinedPath.setFullPath();
 
-        return new AlgorithmResults(0, combinedPath);
+        return new AlgorithmResults(verticesVisited, combinedPath);
     }
 
 
-    private ArrayList<Pair<Pair<Vertex, Vertex>, Integer>> orderTargets(Vertex startVertex, ArrayList<Vertex> targets) {
+    private ArrayList<Pair<Pair<Vertex, Vertex>, Integer>> orderTargetsByDistance(Vertex startVertex, ArrayList<Vertex> targets) {
+        // Create a copy of the targets to avoid modifying the original list
         ArrayList<Vertex> targetsCopy = new ArrayList<>(targets);
+        ArrayList<Pair<Vertex, Integer>> orderedTargets = new ArrayList<>();
+        Vertex currentVertex = startVertex;
 
-        ArrayList<Pair<Vertex, Integer>> targetVerticesOrder = new ArrayList<>();
-
-        Pair<Vertex, Integer> minDistance = null;
-        Vertex currVertex = startVertex;
+        //Find distance for each target from start vertex
         while (!targetsCopy.isEmpty()) {
-            for (Vertex v : targetsCopy) {
-                int distance = heuristic(currVertex, v);
+            Pair<Vertex, Integer> closestTarget = null;
 
-                if (minDistance == null) {
-                    minDistance = new Pair<>(v, distance);
-                } else {
-                    if (minDistance.getSnd() > distance) {
-                        minDistance = new Pair<>(v, distance);
-                    }
+            for (Vertex target : targetsCopy) {
+                int distance = heuristic(currentVertex, target);
+
+                if (closestTarget == null || distance < closestTarget.getSnd()) {
+                    closestTarget = new Pair<>(target, distance);
                 }
             }
 
-            targetVerticesOrder.add(minDistance);
-            targetsCopy.remove(minDistance.getFst());
-            currVertex = minDistance.getFst();
-            minDistance = null;
+
+            orderedTargets.add(closestTarget);
+            targetsCopy.remove(closestTarget.getFst());
+            currentVertex = closestTarget.getFst();
         }
+
 
         ArrayList<Pair<Pair<Vertex, Vertex>, Integer>> targetPaths = new ArrayList<>();
 
-        targetPaths.add(new Pair<>(new Pair<>(startVertex, targetVerticesOrder.getFirst().getFst()), targetVerticesOrder.getFirst().getSnd()));
-        for (int i = 0; i < targetVerticesOrder.size() - 1; i++) {
-            targetPaths.add(new Pair<>(new Pair<>(targetVerticesOrder.get(i).getFst(), targetVerticesOrder.get(i+1).getFst()), targetVerticesOrder.get(i+1).getSnd()));
+        //Add the path from the starting vertex to the first target
+        if (!orderedTargets.isEmpty()) {
+            targetPaths.add(new Pair<>(new Pair<>(startVertex, orderedTargets.get(0).getFst()), orderedTargets.get(0).getSnd()));
+        }
+
+        //Add paths between consecutive targets
+        for (int i = 0; i < orderedTargets.size() - 1; i++) {
+            Vertex from = orderedTargets.get(i).getFst();
+            Vertex to = orderedTargets.get(i + 1).getFst();
+            int distance = orderedTargets.get(i + 1).getSnd();
+            targetPaths.add(new Pair<>(new Pair<>(from, to), distance));
         }
 
         return targetPaths;
     }
+
 
     private Path reconstructPath(Map<Vertex, Vertex> cameFrom, Vertex current, Vertex startVertex) {
         Path path = new Path();
@@ -159,7 +170,26 @@ public class AStar implements Algorithm {
             }
         }
 
+        combined.setWeight(calculatePathDistance(combined));
+
         return combined;
+    }
+
+    private int calculatePathDistance(Path path) {
+        int distance = 0;
+
+        List<WeightedEdge<Vertex, Vertex>> edges = Main.weightedGraph.getEdges();
+
+        for (int i = 0; i < path.getPath().size() - 1; i++) {
+            for (WeightedEdge<Vertex, Vertex> edge : edges) {
+                if (edge.getFst().equals(path.getPath().get(i)) && edge.getSnd().equals(path.getPath().get(i+1))) {
+                    distance += edge.getWeight();
+                    break;
+                }
+            }
+        }
+
+        return distance;
     }
 
     @Override
